# dvt-circuits

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  final_verification.json  readme.md
.github/workflows/: main.yml  rust.yml
crates/bad_encrypted_share_prove/: Cargo.toml
crates/bad_encrypted_share_prove/src/: main.rs
crates/bad_parial_key_prove/: Cargo.toml
crates/bad_parial_key_prove/src/: main.rs
crates/bad_share_exchange_prove/: Cargo.toml
crates/bls_utils/: Cargo.toml
crates/bls_utils/src/: bls.rs  input.rs  lib.rs  verification.rs
crates/crypto/: Cargo.toml
crates/dkg/: Cargo.toml
crates/dkg/src/: dkg_math.rs  lib.rs  types.rs  verification.rs
crates/dkg/src/crypto/: bls_common.rs  bls_keys.rs  mod.rs  secp256k1_keys.rs  traits.rs
crates/dvt/: Cargo.toml
crates/dvt_abi/: Cargo.toml
crates/dvt_abi/src/: lib.rs
crates/dvt_abi_host/: Cargo.toml
crates/dvt_common/: Cargo.toml
crates/dvt_common/src/: bls_common.rs  bls_keys.rs  crypto.rs  dvt_math.rs  input.rs  lib.rs  verification.rs
crates/finalization_prove/: Cargo.toml
crates/share_exchange_prove/: Cargo.toml
crates/wrong_final_key_generation_prove/: Cargo.toml
crates/wrong_final_key_generation_prove/src/: main.rs
doc/: bad_encrypte_share_interactive.html  bad_partial_key_interactive.html  bad_share_interactive.html  dkg_verification.md  dvt_bad_share_interactive.html  finalization_interactive.html
elf/: riscv32im-succinct-zkvm-elf
examples/: bad_encrypted_bad_share.json  bad_partial_key.json  bat_encrypted_partial_key.json  dvt_bad_share.json  finalization_test.json
script/: gen_spec.sh  run.sh  run_all_examples.sh  test_case_gen.sh
script/hooks/: pre-commit
script/misc/: bad_encrypted_share_params.json  bad_partial_key_params.json  bad_share_params.json  finalization_params.json
scripts/: run.sh
spec/: bad_encrypted_partial_key_spec.json  bad_partial_key_spec.json  finalization_spec.json  share_exchange_spec.json
spec/json/: bad_encrypted_partial_key_spec.json  bad_partial_key_spec.json  finalization_spec.json  share_exchange_spec.json
spec/yaml/: bad_encrypted_partial_key_spec.yaml  bad_partial_key.yaml  finalization.yaml  share_exchange_spec.yaml
src/: file_utils.rs  main.rs
src/bls_share_prove/: Cargo.toml
src/bls_share_prove/src/: main.rs
src/bls_utils/: Cargo.toml
src/dvt_abi/: Cargo.toml
src/dvt_abi_host/: Cargo.toml
src/dvt_prover_host/: Cargo.toml  build.rs  log.txt
src/dvt_prover_host/src/: main.rs
src/finalization_prove/: Cargo.toml
src/service/: node.rs
src/share_exchange_prove/: Cargo.toml
test_vectors/bad_encrypted_share/: dvt-keygen-1-to-2-encrypted.json  same_files.txt  seeds-commitment-from-1-to-1-encrypted.json  seeds-commitment-from-1-to-2-bad-secret-key-encrypted.json  seeds-commitment-from-1-to-2-bad-signature-encrypted.json  seeds-commitment-from-1-to-2-encrypted.json  seeds-commitment-from-1-to-2-fewer-base-hashes-encrypted.json  seeds-commitment-from-1-to-2-wrong-secret-key-encrypted.json  seeds-commitment-from-1-to-2-zero-k-encrypted.json  seeds-commitment-from-1-to-3-bad-secret-key-encrypted.json  seeds-commitment-from-1-to-3-bad-signature-encrypted.json  seeds-commitment-from-1-to-3-encrypted.json  seeds-commitment-from-2-to-1-bad-base-hash-encrypted.json  seeds-commitment-from-2-to-1-bad-hash-encrypted.json  seeds-commitment-from-2-to-1-bad-initial-hash-encrypted.json  seeds-commitment-from-2-to-1-bad-secret-key-encrypted.json  seeds-commitment-from-2-to-1-fewer-base-hashes-encrypted.json  seeds-commitment-from-2-to-1-more-base-hashes-encrypted.json  seeds-commitment-from-2-to-1-wrong-secret-key-encrypted.json  seeds-commitment-from-2-to-1-wrong-signature-encrypted.json
test_vectors/finalization/: bad-aggregate-pubkey.json  bad-base-hash.json  bad-message-signature.json  bad-partial-pubkey.json  empty-generation.json  fewer-base-pubkeys.json  fewer-generations.json  finalization_test.json  more-base-pubkeys.json  more-generations.json  n-less-than-k.json  report-1-gen-bad-base-hash.json  report-1-zero-k.json  report-1.json  report-bad-aggregate-pubkey.json  report-fewer-generations.json  report-gen-bad-base-hash.json  report-gen-bad-message-signature.json  report-gen-bad-partial-pubkey.json  report-gen-fewer-base-pubkeys.json  report-gen-more-base-pubkeys.json  report-gen-wrong-base-hash.json  report-gen-wrong-message-cleartext.json  report-gen-wrong-message-signature.json  report-gen-wrong-partial-pubkey.json  report-more-generations.json  report-n-less-than-k.json  report-wrong-aggregate-pubkey.json  report-zero-k.json  report.json  wrong-aggregate-pubkey.json  wrong-base-hash.json  wrong-genid.json  wrong-message-cleartext.json  wrong-message-signature.json  wrong-partial-pubkey.json  zero-k.json
test_vectors/negative/: bad_commitment_hash.json  share_invalid_sig.json  wrong_id.json
test_vectors/positive/: finalization_test.json  share_test.json
test_vectors/share/: bad_commitment_hash.json  dvt-keygen-1-to-2.json  dvt-keygen-from-1-to-2-bad-dst-base-hash.json  dvt-keygen-from-1-to-2-bad-genid.json  dvt-keygen-from-1-to-2-bad-hash.json  dvt-keygen-from-1-to-2-bad-secret-key.json  dvt-keygen-from-1-to-2-bad-signature.json  dvt-keygen-from-1-to-2-fewer-base-hashes.json  dvt-keygen-from-1-to-2-fewer-base-pubkeys.json  dvt-keygen-from-1-to-2-more-base-hashes.json  dvt-keygen-from-1-to-2-more-base-pubkeys.json  dvt-keygen-from-1-to-2-n-less-than-k.json  dvt-keygen-from-1-to-2-zero-k.json  initial_commitment_hash_missmatch.json  invalid_secret.json  seeds-commitment-from-1-to-2-bad-hash.json  seeds-commitment-from-1-to-2-bad-pubkey.json  seeds-commitment-from-1-to-2-bad-secret-key.json  seeds-commitment-from-1-to-2-bad-signature.json  seeds-commitment-from-1-to-2-fewer-base-hashes.json  seeds-commitment-from-1-to-2-more-base-hashes.json  seeds-commitment-from-1-to-2-wrong-hash.json  seeds-commitment-from-1-to-2-wrong-pubkey.json  seeds-commitment-from-1-to-2-wrong-secret-key.json  seeds-commitment-from-1-to-2-wrong-signature.json  seeds-commitment-from-1-to-2-zero-k.json  share_invalid_sig.json  (+3 more)
(+96 files in other folders)
