[package]
name = "dvt_prover_host"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }



[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Martin Dobrev <martindobrev0@gmail.com>", "Grigor Gachev", "Zahary Karadjov" ]
keywords = ["nimbus", "dvt"]
categories = ["cryptography"]
repository = "https://github.com/metacraft-labs/dvt-circuits"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "crates/*",
]

[dependencies]
hex = "0.4.3"
sp1-sdk = "3.4.0"

text_io = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
clap = { version = "4", features = ["derive"] }
dvt = { path = "crates/dvt" }
jsonschema = "0.16"
anyhow = "1.0.96"
colored = "3.0.0"
strip-ansi-escapes = "0.2.1"

[build-dependencies]
sp1-build = "4.0.0"
