[package]
name = "dkg_prover_host"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }



[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Martin Dobrev <martindobrev0@gmail.com>", "Grigor Gachev", "Zahary Karadjov" ]
keywords = ["nimbus", "dkg"]
categories = ["cryptography"]
repository = "https://github.com/metacraft-labs/dkg-circuits"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "crates/*",
]

[dependencies]
hex = "0.4.3"
sp1-sdk = "3.4.0"

text_io = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
schemars = "0.8.22"
clap = { version = "4", features = ["derive"] }
dkg = { path = "crates/dkg" }
jsonschema = "0.16"
anyhow = "1.0.96"
colored = "3.0.0"
strip-ansi-escapes = "0.2.1"
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }

[build-dependencies]
sp1-build = "4.0.0"
