[package]
name = "bad_encrypted_share_prove"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = "3.4.0"
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
serde_cbor = "0.10"
dvt_abi = { path = "../dvt_abi" }
dvt_common = { path = "../dvt_common" }
crypto = { path = "../crypto" }
bls12_381 = { git = "https://github.com/NDobrev/bls12_381", branch="fp-to-bytes", features = ["experimental"]}
hex = "0.4"
chacha20 = "0.9.1"
sha2 = "0.9"

hex-literal = "0.4.1"