[package]
name = "bad_parial_key_prove"
version = "1.1.0"
edition = "2021"
publish = false

[features]
default = []
auth_commitment = ["dkg/auth_commitment"]

[dependencies]
sp1-zkvm = "4.2.1"
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
serde_cbor = "0.10"
dkg = { path = "../dkg", default-features = false }
hex = "0.4"
chacha20 = "0.9.1"