[package]
name = "bls_utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", features = ["experimental"]  }
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
dvt_abi = { path = "../dvt_abi" }
sha2 = "0.10"
hex = "0.4"
sp1-zkvm = "3.4.0"