[package]
name = "dkg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = {version="1.0.216",  features = ["derive"]}
serde_json = "1.0"
serde_cbor = "0.10"
schemars = "0.8.22"
serde_yaml = "0.9.34"
paste = "1.0"
hex = "0.4"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag= "sha2-v0.9.9-patch-v1" }
bls_org = { package = "bls12_381", version = "0.8.0"}
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "secp256k1-v0.29.1-patch-v1"}
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "bls12_381-v0.8.0-patch-v1" , features = ["experimental"]}