[package]
name = "dkg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
default = []
auth_commitment = []

[dependencies]
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = {version="1.0.216",  features = ["derive"]}
serde_json = "1.0"
serde_cbor = "0.10"
schemars = "0.8.22"
serde_yaml = "0.9.34"
paste = "1.0"
hex = "0.4"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
bls_org = { package = "bls12_381", version = "0.8.0"}
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-4.1.0"}
bls12_381 =  { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2", features = ["experimental"]}