[package]
name = "dvt_abi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
validator = { version = "0.19.0", features = ["derive"] }
crypto = { path = "../crypto" }