[package]
name = "dvt_common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
dvt_abi = { path = "../dvt_abi" }
hex = "0.4"
sp1-zkvm = "3.4.0"
sp1-lib = "3.4.0"
sha2 = "0.9"
bls_org = { package = "bls12_381", version = "0.8.0"}
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "bls12_381-v0.8.0-patch-v1" , features = ["experimental"]}


