[package]
name = "wrong_final_key_generation_prove"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = "3.4.0"
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", features = ["experimental"]  }
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
dvt_abi = { path = "../dvt_abi" }
bls_utils = { path = "../bls_utils" }
sha2 = "0.10"
hex = "0.4"
chacha20 = "0.9.1"