[package]
name = "bls_share_prove"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { path = "../../submodules/sp1/crates/zkvm/entrypoint/" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", features = ["experimental"]  }
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"
serde = "1.0.216"
dvt_abi = { path = "../dvt_abi" }
sha2 = "0.10"
hex = "0.4"