[package]
version = "0.1.0"
name = "dvt_prover_host"
edition = "2021"

[dependencies]
hex = "0.4.3"
sp1-sdk = { path = "../../submodules/sp1/crates/sdk" }
text_io = "0.1.12"
bls12_381 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
dvt_abi = { path = "../dvt_abi" }
dvt_abi_host = { path = "../dvt_abi_host" }

[build-dependencies]
sp1-build = { path = "../../submodules/sp1/crates/build" }
